crates/gelx/tests/snapshots/codegen__codegen_literals@case_06_decimal.snap
---
source: crates/gelx/tests/codegen.rs
expression: "&content"
---
pub mod example {
    use ::gelx::exports as __g;
    /// Execute the desired query.
    pub async fn query(
        client: impl __g::gel_tokio::QueryExecutor,
    ) -> ::core::result::Result<Output, __g::gel_errors::Error> {
        client.query_required_single(QUERY, &()).await
    }
    pub type Input = ();
    pub type Output = __g::BigIntAlias;
    /// The original query string provided to the macro. Can be reused in your codebase.
    pub const QUERY: &str = "select 42e+100n";
}
