crates/gelx/tests/snapshots/codegen__codegen_literals@case_12_named_tuple.snap
---
source: crates/gelx/tests/codegen.rs
expression: "&content"
---
pub mod example {
    use ::gelx::exports as __g;
    /// Execute the desired query.
    pub async fn query(
        client: impl __g::gel_tokio::QueryExecutor,
    ) -> ::core::result::Result<Output, __g::gel_errors::Error> {
        client.query_required_single(QUERY, &()).await
    }
    pub type Input = ();
    #[derive(::std::fmt::Debug, ::core::clone::Clone)]
    pub struct Output {
        pub fruit: String,
        pub quantity: f64,
        pub fresh: bool,
    }
    /// The original query string provided to the macro. Can be reused in your codebase.
    pub const QUERY: &str = "select (fruit := 'Apple', quantity := 3.14, fresh := true)";
}
